import "mapreduce/yt/interface/protos/extension.proto";

package NNeuralRankerProtocol;

message TDssmVector {
    optional string Name = 1;
    repeated float Values = 2;
};

message TFactorsAndVectors {
    optional bytes FactorStorageSerialized = 1;
    repeated TDssmVector DssmVectors = 2;
};

message TInputDoc {
    optional TFactorsAndVectors Vectors = 1;
    optional float Target = 2;
    optional string Url = 3;
};

message TInputDocs {
    repeated TInputDoc Docs = 1;
};

message TInputRow {
    optional uint64 Qid = 1 [(NYT.column_name) = "Qid"];
    optional TFactorsAndVectors QueryVectors = 2 [(NYT.column_name) = "QueryVectors"];
    optional TInputDocs InputDocs = 3 [(NYT.column_name) = "Docs"];
};
